--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,7 +1,7 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/Nicollasn3/public_html/
+    - export DEPLOYPATH=/home4/dffee038/public_html/
+    - /bin/rm -rf $DEPLOYPATH/*
     - /bin/cp -R dist/* $DEPLOYPATH
-    - /bin/cp -R public/* $DEPLOYPATH
     - /bin/chmod -R 755 $DEPLOYPATH
